Updated the margin-bottom for Angular 2 for better alignment of tooltip, which resolves #243 and #285

--- a/ng2/bossy.tooltip/_bossy-tooltip.scss
+++ b/ng2/bossy.tooltip/_bossy-tooltip.scss
@@ -32,7 +32,7 @@ $dark-tooltip:  #333;
 
 .bossy-tooltip {
 	+ * {
-		margin-top: 300px;
+		margin-top: 50px;
 	}
 	span.link {
 		position: relative;
